added figure of maze router

--- a/routing.tex
+++ b/routing.tex
@@ -55,10 +55,15 @@ This algorithms are so called general purpose router, they can be used for globa
 \subsubsection{Maze Router}
 Another often used name for algorithm is Lee's algorithm. But whatever the name is, it is based on a grid, where the obstacles and pins can be filled in. Basically, this is the whole information, which is necessary for the router. Afterwards a wave of numbers is started from one pin, and if this wave reaches the target a possible routing is found \nref{fig:maze_router}. The router guarantees the shortest possible route and will find a route in all cases, if it is possible \cite[p. 693]{kaufmann:electronic_design_automation}. So basically this is a very simple approach, but it has several drawbacks. First of all it is quite slow and very memory consuming \cite[p. 693]{kaufmann:electronic_design_automation}, as a quite big matrix might be necessary. This memory consumption also relies heavily on the grid size, which raises the next question: How find should be the grid? Those aren't problems which can not be solved. So, for example to attack the problem with the performance it is possible to transform the algorithm into the A*-Algorithm, which is actually just a modified maze router that prefers the shorter directions to the target. Also for the other problems there are solutions, which are mainly part of the more sophisticated routing algorithms.
 
-PICTURE MISSING MAZE ROUTER
+\begin{figure}
+	\centering
+	\input{FIG/maze_router.svg}
+	\caption{a wavefront explores the area till it reaches the target}
+	\label{fig:maze_router}
+\end{figure}
 
 \subsubsection{Line Router}
-The main difference from a line router to a maze router is the usage of lines as part of a route instead of points. This improves the memory usage and also usually avoids unnecessary bends, but at the same time this modification causes the loss of the guarantee to find the shortest path \cite[p. 695]{kaufmann:electronic_design_automation}. The other big difference lies in the search algorithm itself, as the line router performs a depth-first search instead of a breadth-first search like the maze router. The basic idea behind this type of router is to try to reach the target, or at least on of its coordinate, through a as long as possible line. This line may hit an obstacle, which means that the direction must be changed.
+The main difference from a line router to a maze router is the usage of lines as part of a route instead of points. This improves the memory usage and also usually avoids unnecessary bends, but at the same time this modification causes the loss of the guarantee to find the shortest path \cite[p. 695]{kaufmann:electronic_design_automation}. The other big difference lies in the search algorithm itself, as the line router performs a depth-first search instead of a breadth-first search like the maze router. The basic idea behind this type of router is to try to reach the target, or at least on of its coordinate, through a as long as possible line. This line may hit an obstacle, which means that the direction must be changed. And in this way the router always goes as far as possible into a direction and changes the direction till he reaches the target.
 
 \subsection{Steiner Routing}
 The algorithms above only considered two-pin nets. Very often nets have more than two pins. For these cases a possible solution would be to consider always only two pins at a time and connect the others sequentally to the previous ones. This can result in a lot worse results than the optimum \cite[p. 701]{kaufmann:electronic_design_automation}. A better approach is to use a Steiner-tree \cite[page 153]{springer:eda_analog_routing}.
@@ -66,7 +71,7 @@ The algorithms above only considered two-pin nets. Very often nets have more tha
 \subsection{Sophisticated Routing Algorithms}
 As it is not the topic of this thesis to describe in detail every possible routing algorithm I just want to bring here up some possible approaches. They are build around several very nice ideas but had all one drawback, which made them not useful for the used hierarchical placer, or were a bit to complex to be easy to implement. As the target of this thesis is mainly to create feasible and useful, but not perfect, layouts, I haven't chosen one of these sophisticated algorithms.
 \begin{itemize}
-\item ROSA router \cite[page 165]{springer:eda_analog_routing}
+\item ROSA \cite[page 165]{springer:eda_analog_routing}
 \item MIGHTY \cite[page 166]{springer:eda_analog_routing}
 \item ILAC \cite[page 167]{springer:eda_analog_routing}
 \item SALIM \cite[page 167]{springer:eda_analog_routing}
@@ -96,7 +101,7 @@ The first decision to made was which algorithms should I implement. The more sop
 \subsubsection{Select a Target}
 The first thing which the algorithm has to do, before it can calculate a route, is to selected the start and target contact area. There can be several possibilities, as every pin can have several contact areas. Later on we will even see that already created routes can be candidates to start or end with a route. Basically this task can be seen as the selection of the closest rectangles of two lists of possibilities. For this I first want to talk a little bit about how the closest distance between two rectangles can be calculated.
 
-For two rectangles there are several possible constellations. The first one we usually check is, if the overlap. If this is the case we can calculated easily the rectangle which is covered by both \nref{fig:rectangles_overlapping}. The distance is 0 in this case, and as start points for both rectangles we can select the center of gravity of the overlapping area.
+For two rectangles there are several possible constellations. The first one I check is, if they overlap. If this is the case we can calculated easily the rectangle which is covered by both \nref{fig:rectangles_overlapping}. The distance is 0 in this case, and as start points for both rectangles we can select the center of gravity of the overlapping area.
 
 \begin{figure}
 	\centering
@@ -105,7 +110,7 @@ For two rectangles there are several possible constellations. The first one we u
 	\label{fig:rectangles_overlapping}
 \end{figure}
 
-If the two rectangles do not overlap it becomes a little bit more difficult. In this case we can at least say, that one of the rectangle has its closest point at one of the. Actually there can be even an endless count of solutions for this problem, but we are only interested in one of them. Because of this we select the easiest to calculate solution, which means the selection of a corner for one rectangle. The closest corner from the first rectangle to the second one is that one, which has the closest euclidean distance to the center of gravity of the second one \nref{fig:rectangles_closest_corner}. As we now know for one rectangle the closest point we can start to select the closest point on the second one. This point must be obviously on one of the edges. Every edges is basically a line segment, where the closest point can be calculated easily. For this task we first need the expansion of the line segment into a whole line. We then can turn this line 90 degrees (it doesn't matter in which direction as it is a line) and move this new line, so that it crosses our point, from which we want to know the closest point on the line segment. The crossing point of these two lines, if it is also inside the line segment, is the closest point. If this crossing point is outside the line segment the closest point must be the start or end point of the line segment, which are actually the rectangle's corners.
+If the two rectangles do not overlap it becomes a little bit more difficult. In this case I can at least say, that one of the rectangle has its closest point at one of the. Actually there can be even an endless count of solutions for this problem, but we are only interested in one of them. Because of this we select the easiest to calculate solution, which means the selection of a corner for one rectangle. The closest corner from the first rectangle to the second one is that one, which has the closest euclidean distance to the center of gravity of the second one \nref{fig:rectangles_closest_corner}. As we now know for one rectangle the closest point we can start to select the closest point on the second one. This point must be obviously on one of the edges. Every edges is basically a line segment, where the closest point can be calculated easily. For this task we first need the expansion of the line segment into a whole line. We then can turn this line 90 degrees (it doesn't matter in which direction as it is a line) and move this new line, so that it crosses our point, from which we want to know the closest point on the line segment. The crossing point of these two lines, if it is also inside the line segment, is the closest point. If this crossing point is outside the line segment the closest point must be the start or end point of the line segment, which are actually the rectangle's corners.
 
 \begin{figure}
 	\centering
