--- a/custom.bib
+++ b/custom.bib
@@ -2,7 +2,7 @@
 	title = {{{Analog Layout Synthesis}}},
 	year = {2011},
 	url = {Springer, ISBN: 978-1-4419-6931-6},
-	author = {Balasa and Lin and Chang and Strasser and Eick and Graeb and Schlichtmann and Dündar and Unutulmaz and Said and Dessouky and El-Adawi and Abbas and Shahein and Castro-Lopez and Roca and Fernandez and Jerke and Lienig and Freuer},
+	author = {Balasa and Lin and Chang and Strasser and Eick and Gräb and Schlichtmann and Dündar and Unutulmaz and Said and Dessouky and El-Adawi and Abbas and Shahein and Castro-Lopez and Roca and Fernandez and Jerke and Lienig and Freuer},
 }
 
 @manual{kaufmann:electronic_design_automation,
