--- a/introduction.tex
+++ b/introduction.tex
@@ -6,7 +6,7 @@ The actually last missing step will be the integration of the already developed 
 
 As we already have a fast and reliable placer, called plantage, I have implemented the routing into this tool. The main results of this thesis are:
 \begin{itemize}
-\item As we aren't sure which one will fit best to the unusual hierarchical placer it is easy to replace the router with a different implementation.
 \item I have implemented one line expansion router, which creates in most cases design rule clean routes and considers symmetries.
 \item Based on the previous router I have implemented an extension of the line expansion router, which tries to reduce the parasitics.
+\item As it isn't sure which one will fit best to the hierarchical placer it is easy to replace the router with a different implementation.
 \end{itemize}
