small fixes, added entry in bibliography for lp_solve

--- a/custom.bib
+++ b/custom.bib
@@ -2,19 +2,26 @@
 	title = {{{Analog Layout Synthesis}}},
 	year = {2011},
 	url = {Springer, ISBN: 978-1-4419-6931-6},
-	author = {Balasa and Lin and Chang and Strasser and Eick and Gräb and Schlichtmann and Dündar and Unutulmaz and Said and Dessouky and El-Adawi and Abbas and Shahein and Castro-Lopez and Roca and Fernandez and Jerke and Lienig and Freuer},
+	author = {Balasa and Lin and Chang and Strasser and Eick and Gräb and Schlichtmann and Dündar and Unutulmaz and Said and Dessouky and El-Adawi and Abbas and Shahein and Castro-Lopez and Roca and Fernandez and Jerke and Lienig and Freuer}
 }
 
 @manual{kaufmann:electronic_design_automation,
 	title = {{{Electronic Design Automation}}},
 	year = {2009},
 	url = {Kaufmann, ISBN: 978-0-12-374364-0},
-	author = {Wang and Chang and Cheng},
+	author = {Wang and Chang and Cheng}
 }
 
 @manual{iccad:plantage,
 	title = {{{Deterministic analog circuit placement using hierarchically bounded enumeration and enhanced shape functions}}},
 	year = {2008},
 	url = {ICCAD, DOI: 10.1145/1509456.1509530},
-	author = {Strasser and Eick and Gräb and Schlichtmann and M. Johannes},
+	author = {Strasser and Eick and Gräb and Schlichtmann and M. Johannes}
+}
+
+@manual{lp_solve,
+	title = {{{Introduction to lp\textunderscore solve}}},
+	year = {08.09.2013},
+	url = {http://lpsolve.sourceforge.net},
+	author = {Eikland and Notebaert}
 }
