--- a/definitions.tex
+++ b/definitions.tex
@@ -103,7 +103,7 @@ Minimum widths are very central technology rules for the routing \nref{fig:techn
 	\label{fig:technology_rule_width}
 \end{figure}
 
-The minimum enclosure rules describe minimum distances, which need to be met between shapes on different layers. Typically in a technology file we only have minimum enclosure rules, where one of the considered layers is a via layer. A via layer is during manufacturing an additional layer, in which the connections between the different layers are created. For the routing these rules result in the dimensions of the vias on the layers, which are connected.
+The minimum enclosure rules describe minimum distances, which need to be met between shapes on different layers. Typically in a technology file there are only minimum enclosure rules, where one of the considered layers is a via layer. A via layer is during manufacturing an additional layer, in which the connections between the different layers are created. For the routing these rules result in the dimensions of the vias on the layers, which they connect.
 
 For some Via-Definitions, for example in the Hit-Kit of AMS, some enclosure rules are missing, at least in the technology file, but for the design rule check these rules are still existing. In these cases I have to assume that there is a certain default value for the minimum enclosure rules: 0.2$\mu$m to the layer below and 0.15$\mu$m to the layer above of a via layer. These values work at least for the technology definition of AMS, but they may differ in the definition of other manucfacturers.
 
@@ -130,7 +130,7 @@ Last but not least there are several minimum notch rule definitions available in
 \section{Electrical Rules}
 In the tech-file from the manufacturer there are also electrical rules contained. These rules describe the exact electrical behaviour and can be used for example for the simulation. In the routing algorithms later described I will use these values to optimize the behaviour of the circuit layout, therefore I want to describe how they can be interpreted.
 
-The first important value is the sheet resistance. This value describes the resistance of a layer and I used it to calculate the resistance of the routes. I don't need a really exact resistance, only something to measure and compare which takes into account the different layers. Therefore my personal definition for this algorithm of the sheet resistance will possibly be not the right one, but it is useful in this case. For routes on one layer I just multiply the sheet resistance value with the length of the route, as I use always the minimum width. A via doesn't really have a length, so I multiply the value in this case with the area. Afterwards are these two results summed up for a whole connection and represents then the resistance of this connection.
+The first important value is the sheet resistance. This value describes the resistance of a layer and I used it to calculate the resistance of the routes. I don't need a really exact resistance, only something to measure and compare which takes into account the different layers. Therefore my personal definition for this algorithm of the sheet resistance will possibly be not the right one, but it is useful in this case. For routes on one layer I just multiply the sheet resistance value with the length of the route, as I always use the minimum width for routes. A via doesn't really have a length, so I multiply the value in this case with the area. Afterwards these two results are  summed up for a whole connection and this represents then the resistance of this connection.
 
 The other two used values are the edge- and areacapacitance. The edgecapacitance describes the capacity between two neighbour routes on the same layer, the areacapacitance the capacity between two routes on the same position but on different layers. The edgecapacity is calculated as product from the length which the routes share as neighbours with the edgecapacitance and the areacapacity as product from the length which routes share as neighbours with the areacapacitance.
 
