--- a/placement.tex
+++ b/placement.tex
@@ -33,12 +33,12 @@ The general structure of this application is divided into two parts:
 \item Plantage
 \end{itemize}
 
-First we will start with a short description of Plantage. It is a simple command line tool which accepts an xml input file and produces an xml output file. The input file contains the basic information about the circuit, e.g. the modules with their various variants, group definitions, constraints, and so on. The output file than contains a so called shape funtion with different shapes. The shapes are the actual placements which contain the positions of the modules and the selected variants for these.
+First we will start with a short description of Plantage. It is a simple command line tool which accepts an xml input file and produces an xml output file. The input file contains the basic information about the circuit, e.g. the modules with their various variants, group definitions, constraints, and so on. The output file of this tool contains a so called shape funtion with different shapes. The shapes are the actual placements which contain the positions of the modules and the selected variants.
 
-The ICFBInterface is, as its name already tells, an interface between cadence and plantage. It can receive for example the data for a circuit and then guides the user through the process of defining groups and constraints. After this Plantage is executed and the results are displayed. It can even generate real layouts from a selected placement, which was calculated by Plantage.
+The ICFBInterface is, as its name already tells, an interface between cadence and plantage. It can receive for example the data of a circuit and then guides the user through the process of defining groups and constraints. After this Plantage is executed and the results are displayed. It can even generate real layouts from a selected placement, which was calculated by Plantage.
 
 \section{Algorithm}
-As already mentioned before the placement is generated hierarchically. The starting point for the calculation of a placement is an enumeration sequence. This value is a very compact way to store the information of related positions for a bunch of modules. It consists out of a list of boolean variables, usually stored as a string with the values \textit{E} for east and \textit{N} for north. The modules and selected variants for this enumeration are then stored in a B*-tree. On this data structure then the actual calculation of the coordinates, considering the given constraints, is done. From the B*-tree a bunch of lines for a linear program are created. After this linear program is sovled by an external application, at the moment lpsolve QUELLENANGABE, the actual coordinates for the modules can be calculated from the solution of the linear program. This is done usually for some different enumerations. The list of possible placements, which is generated that way, is then filtered by the area and only a certain number of placements is then used on the next higher hierarchy level.
+As already mentioned before the placement is generated hierarchically. The starting point for the calculation of a placement is an enumeration sequence. This value is a very compact way to store the information of related positions for a bunch of modules. It consists out of a list of boolean variables, usually stored as a string with the values \textit{E} for east and \textit{N} for north. The modules and selected variants for this enumeration are then stored in a B*-tree. On this data structure then the actual calculation of the coordinates, considering the given constraints, is done. From the B*-tree a bunch of lines for a linear program is created. After this linear program is solved by an external application, at the moment lp\textunderscore solve \cite{lp_solve}, the actual coordinates for the modules can be calculated from the solution of the linear program. This is done usually for some different enumerations. The list of possible placements, which is generated that way, is then filtered by the area and only a certain number of placements is then used on the next higher hierarchy level.
 
 \section{Software Architecture}
 In the following part the software architecture of only Plantage will be described, as this was the main part for the implementation of the routing. On the side of the GUI only some additional information needed to be displayed or manipulated by the user.
