improved paragraph about the software architecture

--- a/placement.tex
+++ b/placement.tex
@@ -43,4 +43,4 @@ As already mentioned before the placement is generated hierarchically. The start
 \section{Software Architecture}
 In the following part the software architecture of only Plantage will be described, as this was the main part for the implementation of the routing. On the side of the GUI only some additional information needed to be displayed or manipulated by the user.
 
-Plantage is a typical example for a grown code base. It contained a lot of different coding styles, had some half implemented features and a lot of old and dead development branches, which were part of the production code. So the first task was to clean this mess up. The main problem here was, that the existing and working features shouldn't be broken, what could had happend easily. For the beginning some test input was generated which has covered the most important features. After every risky change the output from this data could be generated and compared with the results before the changes. Through this practise it was possible to slowly refactor the code and increase the encapsulation for some parts. Then for these parts unit tests were written and therefore it was not that dangerous anymore to make changes in them. One by one this was applied to nearly the complete code base. The result of this is a now well tested and documented code base which easiliy can be changed and improved. Additionally the basic structure of the architecture was improved, or better said: An architecture was developed and applied to the code. Therefore it became easier to understand what the different parts of the code actually do. This was also important for the implementation of a routing algorith, as it by the way produced a single point, where the routing can be done.
+Plantage is a typical example for a grown code base. It contained a lot of different coding styles, had some half implemented features and a lot of old and dead development branches, which were part of the production code. So my first task was to clean this mess up. The main problem here was, that the existing and working features shouldn't be broken, what could had happend easily. For the beginning I generated some test input which covered the most important features. After every risky change I could generate the output from this data and compared it with the results before the changes. Through this practise I was able to slowly refactor the code and increase the encapsulation for some parts. This enabled me to write unit tests for these parts and reduce the risk for broken features even more. One by one I applied this to nearly the complete code base. The result of this is a now well tested and documented code base which easiliy can be changed and improved. Additionally the basic structure of the architecture improved, or better said: An architecture was developed and applied to the code. Therefore it became easier to understand what the different parts of the code actually do. This was also important for the implementation of a routing algorithm, as it by the way produced a single point, where the routing can be done.
