--- a/routing.tex
+++ b/routing.tex
@@ -191,15 +191,15 @@ And this is the point where the line expansion feasibility router comes into pla
 This extended version of the line expansion router is based on the simple version. So it is again a sequential approach, with the same drawbacks and advantages as the previous versions. The main difference to it is how the different routes are combined to a complete net and how the possibilities are selected afterwards. But before I discuss the selection I want to describe how the possibilities are generated.
 
 \subsubsection{Create Routes}
-The routing is again seperated into the routing of the nets. For every possibility of the first net I create again the same amount of possibilities for every other net, and vice versa. One single net is created in the same manner, but in this case it is created by several routes. The first route connects the first two modules, the second route connects the third module to the already existing net, the third route connects the fourth module to the already existing net, and so on. As the line expansion algorithm creates a bunch of possibilities for every route we receive a whole set of possibilities for every net. The maximum number of this possibilities is limited by an algorithm parameter, which creates an implicit limitiation of the maximum possibilities of every route of a net.
+The routing is again seperated into the routing of the nets. For every possibility of the first net I create again the same amount of possibilities for every other net, and vice versa. One single net is created in the same manner, but in this case it is created by several routes. The first route connects the first two modules, the second route connects the third module to the already existing net, the third route connects the fourth module to the already existing net, and so on. As the line expansion algorithm creates a bunch of possibilities for every route I receive a whole set of possibilities for every net. The maximum number of this possibilities is limited by an algorithm parameter, which creates an implicit limitiation of the maximum possibilities of every route of a net.
 
-This additional parameter is a quite important one for this version of the router as the computation time increases exponential with this number it is a good starting point if you want to reduce the time spent on routing. As one net can connect more than two modules this count must be distributed to the routes, which constitute the net. In the case of only two modules to connect it is quite easy, the router than selects the as much possibilities for this route as he can spent on the whole net. If there are more modules it becomes a bit more complicated, as for every selection of the first route there are again as much possibilities for the second one, and so on, if we distribute the possibilities equally to all parts of the net. If we continue this thought we get a maximum count of possibilities for each route ($x_{route}$) of a net with a total maximum count of possibilities ($x_{net}$) and $n$ modules:
-\[x_{route} = \sqrt[n]{x_{net}}\]
+This additional parameter is a quite important one for this version of the router as the computation time increases exponential with this number it is a good starting point if you want to reduce the time spent on routing. As one net can connect more than two modules this count must be distributed to the routes, which constitute the net. In the case of only two modules to connect it is quite easy, the router than selects the as much possibilities for this route as he can spent on the whole net. If there are more modules it becomes a bit more complicated, as for every selection of the first route there are again as much possibilities for the second one, and so on, if I distribute the possibilities equally to all parts of the net. If I continue this thought I get a maximum count of possibilities for each route ($x_{route}$) of a net with a total maximum count of possibilities ($x_{net}$) and $n$ modules:
+\[x_{route} = \sqrt[n - 1]{x_{net}}\]
 
 This formula can also be used for the case of only one module. As I want to exploit the total maximum count of possibilities the last route of a net can just create as much variants till the total maximum is reached.
 
 \subsubsection{Select Routes}
-The selection of the routes after the creations makes use of the parasitics. They should be minimized in all cases, the resistance and the capacities. For a minimum resistance only the length and the selection of layers is a matter from interest, but for the capacities the whole geometry must be taken into account. Also, as there are two different values to minimize, the user has to define how important which type of parasitic is to him. There can't be a general definition like \emph{resistance is twice imporant than capacity}. This depends on the whole circuit and the constraints which the circuit designers wants to meet.
+The selection of the routes after the creations makes use of the parasitics. They should be minimized in all cases, the resistance and the capacities. For a minimum resistance only the length and the selection of layers is a matter from interest, but for the capacities the whole geometry must be taken into account. Also, as there are two different values to minimize, the user has to define how important which type of parasitic is to him. There can't be a general definition like \emph{resistance is twice imporant than capacity}. This depends on the whole circuit and the constraints which the designer wants to meet.
 
 The actual selection of the route is quite easy: After the creation step I have a whole bunch of possible routings, where I calculate the parasitic sum
 \[p = w_R \cdot R + w_C \cdot C\]
